# Ronin-Supply

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  SETUP.md  docker-compose.yml  pyproject.toml  requirements.txt  run_local.py
.kiro/specs/ronin-supply/: design.md  requirements.md  tasks.md
ronin_supply/: __init__.py  config.py  main.py
ronin_supply/core/: database.py  logging.py  redis.py  redis_optional.py
ronin_supply/modules/: __init__.py
ronin_supply/modules/merchant/: __init__.py
ronin_supply/modules/salvager/: __init__.py
ronin_supply/modules/seer/: __init__.py
ronin_supply/services/: ai_services.py  supabase_client.py  web_intelligence.py
scripts/: init-extensions.sql
tests/: __init__.py  conftest.py  test_main.py
